--- a/src/layouts/SeriesList.astro
+++ b/src/layouts/SeriesList.astro
@@ -47,7 +47,7 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
                             <td>
                                 <table class="data-table" style="border-collapse: collapse; border: none;">
                                     <tr style="height: 0"><td>
-                                        <a><img class="category-image" title="Series" alt="Series" src={baseUrl + "/icons/series.gif"} width={16} height={16} /></a>
+                                        <img class="category-image" title="Series" alt="Series" src={baseUrl + "/icons/series.gif"} width={16} height={16} />{" "}
                                         <a href={`${baseUrl}/series/${post.id}/1`}><b>{post.data.title}</b></a>
                                     </td></td>
                                     <tr class="description"><td>
