Revert testing URL and point modern links to correct site.
This reverts commit 4d2c2f198d4a51e6d291e4359da128d48e8f438d.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Layout from '../layouts/Layout.astro';
 				This version of my blog has been made specifically for old browsers and for those who like to browse the old net while using Windows 98 or Mac Classic.
 			</p>
 			<p>
-				The contents of this version are not much different from the <a href="http://yonic-corner-astro.netlify.app/">modern version</a>,
+				The contents of this version are not much different from the <a href="https://modern.yonic.blog">modern version</a>,
 				but some articles from the modern version will not appear in this one due to technical limitations.
 			</p>
 			<h3>Recommended software</h3>
