Automatically replace HTML elements with components, deprecate biyonic components

--- a/src/components/biyonic/ListItem.astro
+++ b/src/components/biyonic/ListItem.astro
@@ -1,1 +1,5 @@
+---
+console.warn(`WARNING: Component "${Astro.self.moduleId}"\n\tis deprecated and will be removed in a future version. Remove it from the MDX post exported components.`);
+---
+
 <li><slot/></li>
