--- a/src/components/biyonic/Paragraph.astro
+++ b/src/components/biyonic/Paragraph.astro
@@ -1,1 +1,4 @@
+---
+console.warn(`WARNING: Component "${Astro.self.moduleId}"\n\tis deprecated and will be removed in a future version. Remove it from the MDX post exported components.`);
+---
 <p><slot/></p>
