Make links more visible

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -164,8 +164,10 @@ const basify = (url: string) => `url(${baseUrl}${url})`;
 	a {
         font-weight: bold;
         color: #056B5A;
-        text-decoration: none;
     }
+	a.tag {
+		text-decoration: none;
+	}
 	a img {
 		border: none;
 	}
