--- a/src/components/NavigationTable.astro
+++ b/src/components/NavigationTable.astro
@@ -39,6 +39,9 @@ const {links, title, type} = Astro.props;
         text-align: left;
         font-size: 10pt;
     }
+    .navigation a {
+        text-decoration: none;
+    }
     .navigation li {
         margin: 3px 0;
         margin-left: -10px;
