--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,6 +35,12 @@
             width: 100%;
             height: 100px;
             margin: 0;
+            a {
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
             .description {
                 height: 100%;
                 a {
@@ -42,6 +48,8 @@
                     height: 100%;
                     font-size: 10pt;
                     color: black;
+                }
+                a:hover {
                     text-decoration: none;
                 }
             }
@@ -98,6 +106,10 @@
     font-size: 10pt;
     a {
         color: #0061bd;
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
     }
 }
 .tag {
