Improve Figure display

--- a/src/components/Figure.astro
+++ b/src/components/Figure.astro
@@ -6,9 +6,8 @@ interface Props {
     alt: string,
     width?: number | string,
     fallback?: "jpg" | "jpeg" | "gif" | "png",
-    nocaption?: boolean,
 }
-const { src, alt, nocaption = false, fallback = "jpg" } = Astro.props;
+const { src, alt, fallback = "jpg" } = Astro.props;
 const margin = 12;
 const padding = 3;
 const MAX_WIDTH = 454;
@@ -20,10 +19,12 @@ const borderImg = await getImage({src, width: 1, height: 1, format: "gif"});
 <center>
     <div class="figure" style={{background: `url(${borderImg.src})`, width: `${trueWidth}px`, margin: `${margin}px 0`, padding: `${padding}px`}}>
         <Image {src} {alt} width={trueWidth} format={fallback} />
-        {!nocaption && <div class="caption" style={{width: trueWidth+'px'}}>
-            <div style="padding: 10px">
-                <slot />
-            </div>
+        {Astro.slots.has("default") && <div class="caption" style={{width: trueWidth+'px'}}>
+            <center>
+                <div style={{width: trueWidth-10+'px', padding: "10px 0"}}>
+                    <slot />
+                </div>
+            </center>
         </div>}
     </div>
 </center>
