--- a/src/layouts/SeriesList.astro
+++ b/src/layouts/SeriesList.astro
@@ -30,7 +30,7 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
             {page.data.map(async (post) => {
                 let heroImage: any;
                 try {
-                    heroImage = (await import(`../assets/series/${post.id}.png`)).default;
+                    heroImage = post.data.hero?.legacy ?? (await import(`../assets/series/${post.id}.png`)).default;
                 } catch(err) {
                     heroImage = null;
                 }
