--- a/src/pages/blog/article/[...slug].astro
+++ b/src/pages/blog/article/[...slug].astro
@@ -66,7 +66,7 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
 }
 
 const {Content, remarkPluginFrontmatter} = await post.render();
-const hero = await getHeroImage();
+const hero = post.data.hero?.legacy ?? await getHeroImage();
 const {readingTime} = remarkPluginFrontmatter;
 
 const components = { a: Anchor };
