Fix CLS on index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Welcome">
 	<center>
-		<img id="yonic-profile" alt="It's me, Yonic" src={import.meta.env.BASE_URL.replace(/\/$/, "") + "/yonic-profile/summer.gif"} />
+		<img id="yonic-profile" alt="It's me, Yonic" src={import.meta.env.BASE_URL.replace(/\/$/, "") + "/yonic-profile/summer.gif"} width="300" height="300"/>
 		<div class="article">
 			<p>
 				Welcome to the <i>legacy version</i> of the <b>Yonic Corner</b>!<br/>
