--- a/src/pages/blog/article/[...slug].astro
+++ b/src/pages/blog/article/[...slug].astro
@@ -53,13 +53,17 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
 /**
  * Gets the hero image.
  * 
- * The hero image has to be named "hero.png" and be located in a folder named the same way
- * as the target article inside the assets/articles folder.
+ * The hero image has to be named "hero.png" and be located in the post folder.
  * It doesn't need to be a PNG image, other formats are supported.
  */
  async function getHeroImage(): Promise<ImageMetadata | null> {
     try {
-        return (await import(`../../../assets/articles/${post.slug}/hero-legacy.png`)).default
+        const [year, month, id] = post.slug.split("/");
+
+        const imageMeta: ImageMetadata = year === "drafts" 
+            ? (await import(`../../../content/blog/${year}/${month}/hero.png`)).default
+            : (await import(`../../../content/blog/${year}/${month}/${id}/hero.png`)).default;
+        return imageMeta;
     } catch {
         return null;
     }
