Add Archive page and new icon for tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -104,6 +104,11 @@ const basify = (url: string) => `url(${baseUrl}${url})`;
 										href: "/tag",
 										icon: "/icons/tags.gif"
 									},
+									{
+										label: "Archive",
+										href: "/archive",
+										icon: "/icons/archive.gif"
+									},
 								]} />
 							</center>
 						</td>
