--- a/src/pages/blog/article/[...slug].astro
+++ b/src/pages/blog/article/[...slug].astro
@@ -61,8 +61,8 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
         const [year, month, id] = post.slug.split("/");
 
         const imageMeta: ImageMetadata = year === "drafts" 
-            ? (await import(`../../../content/blog/${year}/${month}/hero.png`)).default
-            : (await import(`../../../content/blog/${year}/${month}/${id}/hero.png`)).default;
+            ? (await import(`../../../content/blog/${year}/${month}/hero-legacy.png`)).default
+            : (await import(`../../../content/blog/${year}/${month}/${id}/hero-legacy.png`)).default;
         return imageMeta;
     } catch {
         return null;
