--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const basify = (url: string) => `url(${baseUrl}${url})`;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/x-icon" href={baseUrl + "/favicon.ico"} />
 		<link rel="shortcut icon" type="image/x-icon" href={baseUrl + "/favicon.ico"}>
+		<link rel="alternate" type=" application/atom+xml" href={baseUrl + "/feeds/rss.xml"}>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
         <script src="http://code.jquery.com/jquery-1.0.4.pack.js" integrity="sha256-upOUW/O9T857epnazR8IlX1C0ZSEE19MuqWoC75KUOE=" crossorigin="anonymous"></script>
@@ -148,10 +149,11 @@ const basify = (url: string) => `url(${baseUrl}${url})`;
 				</div>
 				<center style={{backgroundImage: basify("/ui/footer.jpg")}}>
 					<p>Yonic Corner Legacy v{version}, hosted by GitHub Pages <a class="badge" href="https://astro.build"><img align="middle" alt="Built with Astro" src="/badge-astro.gif" width="120" height="20"/></a></p>
-					<span><a href="https://github.com/YonicDev/yonic-corner-legacy">Source code</a> | <a href={baseUrl+"/rss.xml"}><img src={baseUrl+"/icons/rss.gif"} alt="RSS" width="16" height="16" style="vertical-align: middle"/> Subscribe to feed</a> (WIP)</span>
+					<span><a href="https://github.com/YonicDev/yonic-corner-legacy">Source code</a> | <a href={baseUrl+"/feeds/rss.xml"}><img src={baseUrl+"/icons/rss.gif"} alt="RSS" width="16" height="16" style="vertical-align: middle"/> Subscribe to feed</a> (RSS)</span>
 				</center>
 			</div>
 		</center>
+		<slot name="feed-writer" />
 	</body>
 </html>
 <style lang="scss" is:global>
