--- a/src/components/MusicPlayerWindow.astro
+++ b/src/components/MusicPlayerWindow.astro
@@ -4,7 +4,7 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
 
 <img class="navigation-tab" alt="Music player" src={baseUrl + "/ui/tab-player.gif"} width="200" height="32" />
 <div class="player-window">
-    <iframe frameborder="0" width="200" height="200" id="player-frame" src={baseUrl + "/player"} />
+    <iframe name="player" frameborder="0" width="200" height="200" id="player-frame" src={baseUrl + "/player-object/null"} />
 </div>
 
 <style is:global>
@@ -22,5 +22,7 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
         border: none;
         width: 100%;
         height: 100%;
+        overflow: hidden;
+        background: #A1FFED;
     }
 </style>
