--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,8 +33,8 @@ import RSSFeed from "@lib/components/feed/RSSFeed.astro";
 			</ul>
 			<p id="jquery-test">Your browser does not support jQuery. Some functions of the website may not work well.</p>
 			<p>
-				The music player supports versions of <a href="http://archive.org/download/Adobe_Flash_Player_Complete_Collection/fpdownload.macromedia.com/get/flashplayer/installers/archive/" target="_blank">Flash Player 7 to 9</a>.
-				Use Flash Player 9 for Windows 98 and Flash Player 7 for Mac OS 9.</p>
+				The music player supports versions of <a href="http://archive.org/download/Adobe_Flash_Player_Complete_Collection/fpdownload.macromedia.com/get/flashplayer/installers/archive/" target="_blank">Flash Player 6 and higher</a>.
+				Use Flash Player 8 or 9 for Windows and Flash Player 6 for Mac. <b>Flash Player 7 is not recommended due to it causing potential crashes.</b></p>
 			<p>If you're running a modern browser, I recommend using the modern version.</p>
 			<h3>Recommended screen resolution</h3>
 			<p>A resolution of 1024x768 pixels or greater is recommended to view the blog. I might try to make it look good on 800x600 in the future.</p>
