--- a/src/pages/player-object/[...music].astro
+++ b/src/pages/player-object/[...music].astro
@@ -22,10 +22,24 @@ const musicSrc = sources.find(source => new URL(source.src).protocol === "http:"
 const coverImage = cover ? (await import(`../../assets/covers/${cover}.png`)).default : undefined;
 const coverSrc = coverImage? (await getImage({src: coverImage, width: 24, height: 24, format: 'jpg' })).src : undefined;
 
+let musicDuration: number;
+const DEFAULT_DURATION = 1000; // To prevent division by 0 on the swf file.
+
+switch(typeof duration) {
+	case "number":
+		musicDuration = duration;
+		break;
+	case "string":
+		musicDuration = getDurationFromString(duration);
+		break;
+	default:
+		musicDuration = (musicSrc? await getDurationFromSrc(musicSrc.src) : DEFAULT_DURATION);
+}
+
 const flashVars = {
 	src: musicSrc ? decodeURI(musicSrc.src) : "",
 	coverImage: coverSrc? decodeURI(coverSrc) : undefined,
-	musicDuration: duration? getDurationFromString(duration) : (musicSrc? await getDurationFromSrc(musicSrc.src) : 0),
+	musicDuration,
 	musicTitle: [title, author, album].filter(data => data!=null).join(" | ")
 }
 
